test/corpus/literals.txt
================================================================================
Identifiers
================================================================================

foo
foo2
foo.bar
.foo.bar
.__NAMESPACE__.
foo_bar
`_foo`
`a "literal"`
`another
literal \` foo`
`backslash followed by newline \
`
`\``
# Pipe placeholder
_
# Recognized as a single `_foo` identifier, even if invalid R code (#71).
_foo
__foo
_foo_


--------------------------------------------------------------------------------

(program
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (comment)
  (identifier)
  (comment)
  (identifier)
  (identifier)
  (identifier))

================================================================================
Unicode Identifiers
================================================================================

你好
.你.好.
.你_好.

--------------------------------------------------------------------------------

(program
  (identifier)
  (identifier)
  (identifier))

================================================================================
Strings
================================================================================

"foo"
"foo
bar"
"#"
","
"}"
'foo'
'foo
bar'
'#'
','
'}'

--------------------------------------------------------------------------------

(program
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content)))

================================================================================
Strings Without Content
================================================================================

""
''

--------------------------------------------------------------------------------

(program
  (string)
  (string))

================================================================================
Strings With Escape Sequences
================================================================================

"\\"
"\ "
"\n"
"\t"
"\r"

"\0"
"\1"
"\7"
"\12"
"\123"
"\1234"

"\x1"
"\x01"
"\x012"

"\u1"
"\u01"
"\u001"
"\u0001"
"\u00011"

"\u{1}"
"\u{01}"
"\u{001}"
"\u{0001}"

"\U{1}"
"\U{01}"
"\U{001}"
"\U{0001}"
"\U{00001}"
"\U{000001}"
"\U{0000001}"
"\U{00000001}"

"\U1"
"\U01"
"\U001"
"\U0001"
"\U00001"
"\U000001"
"\U0000001"
"\U00000001"
"\U000000011"

"foo\"bar"
"foo\ "
"foo\
"
"\""
'\''

--------------------------------------------------------------------------------

(program
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence))))

================================================================================
Unclosed Double Quote
================================================================================
"\"

--------------------------------------------------------------------------------

(program
  (string
    (string_content
      (escape_sequence))
    (MISSING """)))

================================================================================
Unclosed Single Quote
================================================================================
'\'

--------------------------------------------------------------------------------

(program
  (string
    (string_content
      (escape_sequence))
    (MISSING "'")))

================================================================================
Unclosed Backtick
================================================================================
`\`

--------------------------------------------------------------------------------

(program
  (ERROR
    (UNEXPECTED '\0')))

================================================================================
Raw Strings
================================================================================
r"(raw string)"
R"{another raw string}"
R"--[yet another ]- raw string]--"

r"(")"
r"("")"
r"(')"
r"('')"

r"-(-)-"
r"-()-)-"
r"--()-")--"

r"( () )"
r"(())"
r"( ())"
r"(() )"
r"-())-"
r"-(())-)-"

r"(raw
string
)"

r()

--------------------------------------------------------------------------------

(program
  (string)
  (string)
  (string)
  (string)
  (string)
  (string)
  (string)
  (string)
  (string)
  (string)
  (string)
  (string)
  (string)
  (string)
  (string)
  (string)
  (string)
  (call
    (identifier)
    (arguments)))

================================================================================
Comments
================================================================================

# a comment'

'# not a comment'


'
# still not a comment'

--------------------------------------------------------------------------------

(program
  (comment)
  (string
    (string_content))
  (string
    (string_content)))

================================================================================
Constants
================================================================================

TRUE
FALSE
NULL
Inf
NaN
NA
NA_real_
NA_character_
NA_complex_

--------------------------------------------------------------------------------

(program
  (true)
  (false)
  (null)
  (inf)
  (nan)
  (na)
  (na)
  (na)
  (na))

================================================================================
Integers
================================================================================

12332L
0L
12L
1e1L
# Technically, R parses this as a float with a warning, but for our purposes this is good enough
0.1L

--------------------------------------------------------------------------------

(program
  (integer)
  (integer)
  (integer)
  (integer)
  (comment)
  (integer))

================================================================================
Floats
================================================================================

.66
.11
123.4123
.1234
x <- -.66

--------------------------------------------------------------------------------

(program
  (float)
  (float)
  (float)
  (float)
  (binary_operator
    (identifier)
    (unary_operator
      (float))))

================================================================================
Hexadecimal
================================================================================

# `x` vs `X`
0x123
0X123

# Numbers and letters
0xDEAD
0XDEAD
0x1f2F3
0X1f2F3

# `p` vs `P`
0x0p0
0x0P0
0x0p123
0x0P123

# `+` and `-`
0x0p+0
0x0p-0
0x0p+123
0x0p-123

# As integers
0x123L
0X123L
0xDEADL
0XDEADL
0x0p0L
0x0P0L
0x0p+0L
0x0p-0L

--------------------------------------------------------------------------------

(program
  (comment)
  (float)
  (float)
  (comment)
  (float)
  (float)
  (float)
  (float)
  (comment)
  (float)
  (float)
  (float)
  (float)
  (comment)
  (float)
  (float)
  (float)
  (float)
  (comment)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer))

================================================================================
Hexadecimal with decimal point
================================================================================

# Decimal point without exponent
0x1.234
0x1.

# Decimal point with exponent
0x1.234p0
0x1.deeea11683f49p+0
0x1.234P0

# Decimal point as integer
0x1.234p0L

--------------------------------------------------------------------------------

(program
  (comment)
  (float)
  (float)
  (comment)
  (float)
  (float)
  (float)
  (comment)
  (integer))

================================================================================
Scientific Notation Floats
================================================================================

1e322
1e-3
1e+3
1.8e10
1.e10
1e10

--------------------------------------------------------------------------------

(program
  (float)
  (float)
  (float)
  (float)
  (float)
  (float))

================================================================================
Dot Dot I
================================================================================

..1
..10

--------------------------------------------------------------------------------

(program
  (dot_dot_i)
  (dot_dot_i))
